--- a/packages/foundations/dev/icons.html
+++ b/packages/foundations/dev/icons.html
@@ -221,6 +221,31 @@
       </div>
 
       <div data-spacing="small" class="db-card">
+        <span aria-hidden="true" class="db-icon" data-icon="double_chevron_left"
+          >double_chevron_left</span
+        ><span
+          class="db-infotext"
+          data-icon="none"
+          data-semantic="informational"
+          >double_chevron_left</span
+        >
+      </div>
+
+      <div data-spacing="small" class="db-card">
+        <span
+          aria-hidden="true"
+          class="db-icon"
+          data-icon="double_chevron_right"
+          >double_chevron_right</span
+        ><span
+          class="db-infotext"
+          data-icon="none"
+          data-semantic="informational"
+          >double_chevron_right</span
+        >
+      </div>
+
+      <div data-spacing="small" class="db-card">
         <span
           aria-hidden="true"
           class="db-icon"
