feat: add flat icon navigation for control-panel-mobile

--- a/packages/foundations/dev/icons.html
+++ b/packages/foundations/dev/icons.html
@@ -274,6 +274,16 @@
       </div>
 
       <div data-spacing="small" class="db-card">
+        <span aria-hidden="true" class="db-icon" data-icon="house">house</span
+        ><span
+          class="db-infotext"
+          data-icon="none"
+          data-semantic="informational"
+          >house</span
+        >
+      </div>
+
+      <div data-spacing="small" class="db-card">
         <span aria-hidden="true" class="db-icon" data-icon="information_circle"
           >information_circle</span
         ><span
