fix: issue with drawer and sub-navigation

--- a/packages/foundations/dev/icons.html
+++ b/packages/foundations/dev/icons.html
@@ -334,6 +334,20 @@
 				<span
 					aria-hidden="true"
 					class="db-icon"
+					data-icon="intermediary_stop"
+					>intermediary_stop</span
+				><span
+					class="db-infotext"
+					data-icon="none"
+					data-semantic="informational"
+					>intermediary_stop</span
+				>
+			</div>
+
+			<div data-spacing="small" class="db-card">
+				<span
+					aria-hidden="true"
+					class="db-icon"
 					data-icon="magnifying_glass"
 					>magnifying_glass</span
 				><span
